<resources>
    <string name="app_name">RecyclingFact</string>
    <string name="app_name2">نماء محلي</string>

    <string name="fact_1">95% من معلومات العالم لاتزال مخزنه على الورق واغلبها لاتتم مشاهدته مرة اخرى</string>
    <string name="fact_2">اعادة تدوير قاروة بلاستيك يوفر طاقة كافية لاضاءة مصباح بقدرة 60 واط لمدة 6 ساعات</string>
    <string name="fact_3">الاف المخلوقات البحرية تموت بسبب ابتلاعها اكياس البلاستيك التي تشبه قنديل البحر</string>
    <string name="fact_4">في كل عام يرمي الامريكان قوارير وزجاجات كافية لوصول القمر والعودة اليه 20 مره</string>
    <string name="fact_5">اعادة تدوير طن من البلاستيك يمكن ان يوفر حوالي 2000 غالون من البنزين</string>
    <string name="fact_6"> بداية من عام 2015 جميع سكان نيويورك عليهم اعادة تدوير الاجهزة الالكترونية والا سيواجهون غرامه مقدارها 100 دولار</string>
    <string name="fact_7">اعادة تدوير علبة المنيوم يمكن ان يوفر طاقة تكفي لتشغيل تلفاز لساعتين</string>
    <string name="fact_8">اعادة تدوير طن من الورق يحافظ على 17 شجره</string>
    <string name="fact_9">اعادة تدوير علبة المنيوم يمكن ان يعيدها الى رف متجر خلال 60 يوم</string>
    <string name="fact_10">إبدأ إعادة التدوير بتقليل استخدامك للبلاستك</string>
    <string-array name="facts">
        <item>@string/fact_1</item>
        <item>@string/fact_2</item>
        <item>@string/fact_3</item>
        <item>@string/fact_4</item>
        <item>@string/fact_5</item>
        <item>@string/fact_6</item>
        <item>@string/fact_7</item>
        <item>@string/fact_8</item>
        <item>@string/fact_9</item>
        <item>@string/fact_10</item>

    </string-array>
    <string name="grow">أزرع</string>
    <string name="cook">أطبخ</string>
    <string name="shop">تسوق</string>
    <string name="eat">كل</string>
    <string name="make">أجعل</string>
    <string name="share_friend">شارك مع </string>
    <string name="move_button">اذهب للشاشة الاخرى</string>
    <string name="show_button">أعرض الحكمة</string>

    <string name="enter_name">أدخل الاسم </string>
    <string name="string_eat">eat</string>
    <string name="string_shop">shop</string>
    <string name="string_make">make</string>
    <string name="string_cook">cook</string>
    <string name="string_grow">grow</string>
    <string name="name_button">grow</string>
    <string name="make_description">صناعة منتجك محليا يسهم في زيادة الفرص الوظيفية في ورش العمل و المصانع المحلية. عند إنفاقك المال لورشة أو مصنع محلي فإن ذلك يؤدي إلى تقوية الإقتصاد المحلي للمجتمع ويزيد من تطور قطاعات محلية أخرى. فوائد الصناعة المحلية أنه يمكنك طلب كميات أقل بأسرع وقت ممكن و اكتشاف أخطاء المنتج بأسرع وقت و إصلاحها فورا بسبب عدم وجود مرحلة النقل و جمارك الحدود. عند العمل مع حرفي أو مصنع محلي فإن التواصل يكون أسهل مما يؤدي إلى زيادة كفائة العمل و الإنتاج.</string>
    <string name="cook_description">يمكن للطبخ أن يكون بداية لحياتك الصحية، باستكشاف وصفات صحية و التعلم عن الغذاء. الطبخ لنفسك و لأسرتك يساعدك لمعرفة ما إذا كان هناك حساسية من بعض الأطعمة. من الأمور التي تسهل عليك عملية الطبخ لنفسك هي علاقة الطبخ بتراثك و مشاركة الآخرين، يمكنك أن تختار يوم في الأسبوع يتم الطبخ فيه في المنزل بمشاركة الأسرة أو الأصدقاء سيساعد ذلك في تقوية العلاقة و يسهل عليك عملية الطبخ لوحدك.</string>
    <string name="eat_description">شراء الغذاء محليا يعزز من المزارع المحلية و يساعد في زيادة فرص عمل جديدة في مجال معالجة الغذاء و في نقل و توزيع الغذاء و المال الذي يتم إنفاقه محليا يكون بمثابة استثمار في الاقتصاد المحلي.
‎شراء الغذاء محليا يساعد على تقليل مسافة نقل الغذاء مما يؤدي إلى تقليل استخدام الوقود على المستوى العالمي. و بسبب قصر المسافه فإن الغذاء المحلي أغنى بالعناصر الغذائية و طعمه أحلى.</string>
    <string name="grow_description">عند زراعة الغذاء محليا فإنك تساهم في الحفاظ على الأراضي الزراعية و المساحات المفتوحة في مجتمعك. الزراعة المحلية تساعد في تقليل استهلاك الوقود عالميا، بسبب قرب المسافة التي تستغرق لنقل الغذاء، مما يؤدي إلى الحفاظ على البيئة.</string>
    <string name="shop_description">شراء منتجات محلية يسهم في تقوية الإقتصاد المحلي للمجتمع، يقلل من استخدام الوقود عالميا بسبب قصر مسافة نقل المنتجات، و يزيد من اصرار صاحب المشروع على الإنتاج محليا. عند التعامل مع شركة ناشئة محلية فإن صاحب المشروع يكون أقرب إلى الزبائن مما يؤدي إلى خدمة أفضل لك.</string>

</resources>
